Set up stylelint and prettier

--- a/scss/src/foundation/_variables.scss
+++ b/scss/src/foundation/_variables.scss
@@ -125,7 +125,7 @@ $breakpoints: (
 =============================================*/
 
 $spacing: (
-  none: 0rem,
+  none: 0,
   xxxs: 0.25rem,
   // 4px
   xxs: 0.5rem,
@@ -147,7 +147,7 @@ $spacing: (
 ) !default;
 
 $shadows: (
-  base: 0px 4px 11px rgba(157, 157, 157, 0.21),
+  base: 0 4px 11px rgba(157, 157, 157, 0.21),
 );
 
 /*=====  End of Spacing  ======*/
